# vmi

./: 0001-video-audioflinger.patch  ReadMe.md  编译指南.md
AppDemo/: README.md  local.properties  settings.gradle
AppDemo/app/: build.gradle
AppDemo/app/src/main/: AndroidManifest.xml
AppDemo/gradle/wrapper/: gradle-wrapper.properties
UIDemo/: README.build  README.md  build.gradle  build.sh  gradle.properties  local.properties
UIDemo/app/: build.gradle  proguard-rules.pro
UIDemo/app/libs/: AudioEngineClient.aar  TouchEngineClient.aar  android-segmented-1.0.8.aar
UIDemo/app/src/main/: AndroidManifest.xml
UIDemo/app/src/main/cpp/: CMakeLists.txt  InstructionEngineJni.cpp  InstructionEngineJni.h
UIDemo/gradle/wrapper/: gradle-wrapper.properties
android11client/CloudPhoneUI/app/: build.gradle
android9client/CloudPhoneUI/: settings.gradle
android9client/CloudPhoneUI/app/: build.gradle
android9client/CloudPhoneUI/gradle/wrapper/: gradle-wrapper.properties
container_scripts/: .setup.sh.swp  setup.sh
cs_scripts/: fpscounter.cs
deploy/: url.conf
deploy/exagear/: kylin.sh  ubuntu.sh
deploy/host/: kylin.sh  ubuntu.sh
py_scripts/: plotstats.py
test_script/: citypark.sh  ue4.sh  unity.sh
test_script/env/aarch64/host/: setup-host.sh  setup-vm.sh
test_script/env/aarch64/vm/: setup.sh
test_script/env/x86_64/host/: setup-host.sh  setup-vm.sh
video_encoder/: Android.mk  VideoEncoderLog.cpp  VideoEncoderLog.h  VideoEncoderWrapper.cpp  VideoEncoderWrapper.h  build.sh
vm_scripts/: create.sh  install.sh  tune.sh
(+171 files in other folders)
